objects/ANA_Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>ASL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Aggregate Stop Loss %</inlineHelpText>
        <label>ASL</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>OpportunityID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>